# olinuxino

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  INSTALL  Makefile.am  Makefile.am.user.orig  README.md  TODO  autogen.sh  config.h.in.cmake  configure.ac  olinuxinoConfig.cmake.in
doc/: make_bootable_os_image_on_sd_card.howto
m4/: Makefile.am  ac_path_kernel_source_search.m4
modules/: ACE  ACEStream  Common  Makefile.am  libACEStream
po/: Makefile.am  POTFILES.in
prj/msvc/: VS_ProjectPropertySheet_OpenGL.props  VS_ProjectPropertySheet_libCommon.props  VS_ProjectPropertySheet_png_gtk_glade.props  olinuxino.sln  olinuxino.vcxproj  olinuxino.vcxproj.filters
scripts/: .config  Makefile.am  OLinuxIno.pc.in  a10_lime_debian_3.4.90+_installed_packages.txt  a10_sound.patch  copy_libraries.sh  copy_libs.sh  olimex_mod_mpu6050.conf  olinuxino.pc.in  olinuxino.spec.in  script_a10_lime_HDMI_modmpu6050.fex
src/: CMakeLists.txt  Makefile.am
src/include/: Makefile.am  olinuxino_config.h
src/ko/: Kbuild  Kbuild.bak  Kbuild.generic  Makefile  Makefile.am  Makefile.bak  Makefile.common  Makefile.generic  Makefile.kernel  olimex_mod_mpu6050.c  olimex_mod_mpu6050.h  olimex_mod_mpu6050_defines.h  olimex_mod_mpu6050_device.c  olimex_mod_mpu6050_device.h  olimex_mod_mpu6050_irq.c  olimex_mod_mpu6050_irq.h  olimex_mod_mpu6050_main.c  olimex_mod_mpu6050_main.h  olimex_mod_mpu6050_netlink.c  olimex_mod_mpu6050_netlink.h  olimex_mod_mpu6050_pm.c  olimex_mod_mpu6050_pm.h  olimex_mod_mpu6050_server.c  olimex_mod_mpu6050_server.h  olimex_mod_mpu6050_sysfs.c  olimex_mod_mpu6050_sysfs.h  olimex_mod_mpu6050_timer.c  olimex_mod_mpu6050_timer.h  olimex_mod_mpu6050_types.h  olimex_mod_mpu6050_wq.c  olimex_mod_mpu6050_wq.h  olinuxino_mod_mpu6050.c  olinuxino_mod_mpu6050.h
src/test_u/: CMakeLists.txt  Makefile.am  olimex_mod_mpu6050.cpp  olimex_mod_mpu6050.glade  olimex_mod_mpu6050_callbacks.cpp  olimex_mod_mpu6050_callbacks.h  olimex_mod_mpu6050_common.cpp  olimex_mod_mpu6050_common.h  olimex_mod_mpu6050_defines.h  olimex_mod_mpu6050_eventhandler.cpp  olimex_mod_mpu6050_eventhandler.h  olimex_mod_mpu6050_gtk_callbacks.cpp  olimex_mod_mpu6050_gtk_callbacks.h  olimex_mod_mpu6050_gtk_gl_callbacks.cpp  olimex_mod_mpu6050_inotify.h  olimex_mod_mpu6050_macros.h  olimex_mod_mpu6050_message.cpp  olimex_mod_mpu6050_message.h  olimex_mod_mpu6050_message_base.cpp  olimex_mod_mpu6050_message_base.h  olimex_mod_mpu6050_module_eventhandler.cpp  olimex_mod_mpu6050_module_eventhandler.h  olimex_mod_mpu6050_modules_common.h  olimex_mod_mpu6050_network.h  olimex_mod_mpu6050_opengl.cpp  olimex_mod_mpu6050_opengl.h  olimex_mod_mpu6050_sessionconfiguration.cpp  olimex_mod_mpu6050_sessionconfiguration.h  olimex_mod_mpu6050_sessionmessage.cpp  olimex_mod_mpu6050_sessionmessage.h  olimex_mod_mpu6050_signalhandler.cpp  olimex_mod_mpu6050_signalhandler.h  olimex_mod_mpu6050_stream.cpp  olimex_mod_mpu6050_stream.h  olimex_mod_mpu6050_stream.inl  olimex_mod_mpu6050_stream_common.h  olimex_mod_mpu6050_types.h  olimex_mod_mpu6050_uidefinition.cpp  olimex_mod_mpu6050_uidefinition.h  stdafx.h
src/test_u/etc/: Makefile.am  olimex_mod_mpu6050.glade  olimex_mod_mpu6050.gtk2
